# PyPIC3D

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  autodiff.py  bfield.py  boundaryconditions.py  cg.py  charge_conservation.py  config.toml  defaults.py  efield.py  enviroment.yml  errors.py  experiment_test.py  fdtd.py  fields.py  genfield.py  main.py  model.py  nohup.out  output.toml  particle.py  particlepush.py  pictest.py  plotting.py  pyproject.toml  requirements.txt  rho.py  spectral.py  twostreaminstability.gif.REMOVED.git-id  utils.py
PyPIC3D/: J.py  __init__.py  __main__.py  autodiff.py  boris.py  boundaryconditions.py  cg.py  charge_conservation.py  curl_curl_form.py  defaults.py  diagnostics.py  drifts.py  electrodynamic_tiled.py  electrostatic_tiled.py  errors.py  evolve.py  experiment.py  fdtd.py  fft.py  fields.py  flat_particles.py  indexed_particles.py  initialization.py  laser.py  metric.py  parameters.py  particle.py  pec.py  plotting.py  psatd.py  pstd.py  rho.py  shapes.py  sor.py  spectral.py  utils.py  vector_potential.py
bench/: compare.py  runner.py
docs/: architecture.rst  chargeconservation.rst  conf.py  contributing.rst  demos.rst  development.rst  experiments.rst  grid.rst  index.rst  lasers.rst  materialsurfaces.rst  particles.rst  requirements.in  requirements.txt  solvers.rst  usage.rst  yee.rst
notebooks/: CG_dev.ipynb.REMOVED.git-id
src/: autodiff.py  charge_conservation.py  defaults.py  errors.py  fdtd.py  fields.py  initialization.py  old__init__.py  particle.py  plotting.py  rho.py  spectral.py  utils.py
tests/: J_test.py  __init__.py  boris_test.py  boundaryconditions_test.py  charge_conservation_test.py  direct_deposition_tiled_test.py  errors_test.py  (+36 more)
(+170 files in other folders)
