[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPIC3D"
version = "0.2.0"
description = "A 3D Particle-In-Cell simulation package"
authors = [
    { name = "Christopher Woolford", email = "clwoolford@wisc.edu" }
]
license = { file = "LICENSE" }

dependencies = [
    "jax",
    "jaxdecomp",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "toml",
    "tqdm",
    "epyc"
]

[tool.setuptools]
packages = ["PyPIC3D"]

[project.scripts]
PyPIC3D = "PyPIC3D.__main__:main"