[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPIC3D"
version = "0.1.2"
description = "A 3D Particle-In-Cell simulation package"
authors = [
    { name = "Christopher Woolford", email = "clwoolford@wisc.edu" }
]
license = { file = "LICENSE" }

dependencies = [
    "jax",
    "matplotlib",
    "plotly",
    "toml",
    "tqdm",
    "epyc",
    "pyevtk"
]

[tool.setuptools]
packages = ["PyPIC3D"]

[project.scripts]
PyPIC3D = "PyPIC3D.__main__:main"
